ci: suppress coverage file in pytest hook with --no-cov

--- a/notebook/benchmark.ipynb
+++ b/notebook/benchmark.ipynb
@@ -1,172 +1,178 @@
 {
  "cells": [
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "# Benchmark between `MSDD + Titanet` and `MSDD + WavLMBasePlus`",
-   "id": "cded046ec3dd57d0"
+   "id": "cded046ec3dd57d0",
+   "metadata": {},
+   "source": "# Benchmark between `MSDD + Titanet` and `MSDD + WavLMBasePlus`"
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "#### *The benchmark was performed using 10 randomly selected samples with a total duration of 60 seconds from the AMI Corpus Dataset.*",
-   "id": "47cec77b5401359d"
+   "id": "47cec77b5401359d",
+   "metadata": {},
+   "source": "#### *The benchmark was performed using 10 randomly selected samples with a total duration of 60 seconds from the AMI Corpus Dataset.*"
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Download\n",
-   "id": "c5e0ec5d725382c7"
+   "id": "c5e0ec5d725382c7",
+   "metadata": {},
+   "source": "## Download\n"
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "cdeaa7197529ca70",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "!mkdir -p .data\n",
     "!wget -O .data/ami_manual_1.6.1.tar.gz https://us.openslr.org/resources/16/ami_manual_1.6.1.tar.gz\n",
     "!wget -O .data/Array1-01.tar.gz https://www.openslr.org/resources/16/Array1-01.tar.gz"
-   ],
-   "id": "cdeaa7197529ca70",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Install Libraries & Packages",
-   "id": "37ef0c4237d5a511"
+   "id": "37ef0c4237d5a511",
+   "metadata": {},
+   "source": "## Install Libraries & Packages"
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "7960d13fb226e637",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "%%capture\n",
     "!pip install pydub\n",
     "!pip install wavlmmsdd\n",
     "!pip install nemo_toolkit['asr']\n",
     "!sudo apt update && sudo apt install ffmpeg -y"
-   ],
-   "id": "7960d13fb226e637",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Imports",
-   "id": "88f509dd560099d3"
+   "id": "88f509dd560099d3",
+   "metadata": {},
+   "source": "## Imports"
   },
   {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "57366c9fe77ac02c",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:34:54.748078Z",
      "start_time": "2025-02-14T16:34:54.746048Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
-    "import os\n",
-    "import json\n",
     "import glob\n",
-    "import torch\n",
+    "import json\n",
+    "import os\n",
     "import random\n",
     "import tarfile\n",
-    "from pydub import AudioSegment\n",
-    "from omegaconf import OmegaConf\n",
     "import xml.etree.ElementTree as ET\n",
-    "from wavlmmsdd.audio.feature.embedding import WavLMSV\n",
+    "\n",
+    "import torch\n",
+    "from nemo.collections.asr.models.msdd_models import NeuralDiarizer\n",
+    "from omegaconf import OmegaConf\n",
+    "from pydub import AudioSegment\n",
+    "\n",
     "from wavlmmsdd.audio.diarization.diarize import Diarizer\n",
-    "from nemo.collections.asr.models.msdd_models import NeuralDiarizer"
-   ],
-   "id": "57366c9fe77ac02c",
-   "outputs": [],
-   "execution_count": 12
+    "from wavlmmsdd.audio.feature.embedding import WavLMSV"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Paths\n",
-   "id": "d7f579da20b07474"
+   "id": "d7f579da20b07474",
+   "metadata": {},
+   "source": "## Paths\n"
   },
   {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "151173503091aaf5",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:34:56.827629Z",
      "start_time": "2025-02-14T16:34:56.825671Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "root_dir = \".\"\n",
-    "\n",
-    "config_path = \"../src/wavlmmsdd/audio/config/diar_infer_telephonic.yaml\"\n",
-    "manifest_path = \".data/manifest.json\"\n",
-    "out_dir = \".data\"\n",
-    "\n",
-    "tar_path_ami_manual = \".data/ami_manual_1.6.1.tar.gz\"\n",
-    "tar_path_ami_array1 = \".data/Array1-01.tar.gz\"\n",
-    "\n",
-    "ami_manual_extract_to = \".data/ami_manual_1.6.1\"\n",
-    "ami_array1_extract_to = \".data/Array1-01\"\n",
-    "\n",
-    "segments_dir = \".data/ami_manual_1.6.1/segments\"\n",
-    "wav_root_dir = \".data/Array1-01\""
-   ],
-   "id": "151173503091aaf5",
    "outputs": [],
-   "execution_count": 13
+   "source": [
+    "root_dir = '.'\n",
+    "\n",
+    "config_path = '../src/wavlmmsdd/audio/config/diar_infer_telephonic.yaml'\n",
+    "manifest_path = '.data/manifest.json'\n",
+    "out_dir = '.data'\n",
+    "\n",
+    "tar_path_ami_manual = '.data/ami_manual_1.6.1.tar.gz'\n",
+    "tar_path_ami_array1 = '.data/Array1-01.tar.gz'\n",
+    "\n",
+    "ami_manual_extract_to = '.data/ami_manual_1.6.1'\n",
+    "ami_array1_extract_to = '.data/Array1-01'\n",
+    "\n",
+    "segments_dir = '.data/ami_manual_1.6.1/segments'\n",
+    "wav_root_dir = '.data/Array1-01'"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Configuration\n",
-   "id": "7f77f4e12f93d40e"
+   "id": "7f77f4e12f93d40e",
+   "metadata": {},
+   "source": "## Configuration\n"
   },
   {
+   "cell_type": "code",
+   "execution_count": 14,
+   "id": "7b13c11996ed8bf2",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:34:59.387604Z",
      "start_time": "2025-02-14T16:34:59.377472Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "cfg = OmegaConf.load(config_path)\n",
     "cfg.diarizer.manifest_filepath = manifest_path\n",
     "cfg.diarizer.out_dir = out_dir\n",
-    "device = torch.device(\"cuda\" if torch.cuda.is_available() else \"cpu\")"
-   ],
-   "id": "7b13c11996ed8bf2",
-   "outputs": [],
-   "execution_count": 14
+    "device = torch.device('cuda' if torch.cuda.is_available() else 'cpu')"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Methods",
-   "id": "8e38f265c660c8c7"
+   "id": "8e38f265c660c8c7",
+   "metadata": {},
+   "source": "## Methods"
   },
   {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "384ebe33ba67e6bd",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:35:03.080966Z",
      "start_time": "2025-02-14T16:35:03.071643Z"
     }
    },
-   "cell_type": "code",
+   "outputs": [],
    "source": [
     "def extract(archive_path, extract_to):\n",
-    "    with tarfile.open(archive_path, \"r:gz\") as tar:\n",
+    "    with tarfile.open(archive_path, 'r:gz') as tar:\n",
     "        tar.extractall(path=extract_to)\n",
-    "    print(\"The archive '{}' has been successfully extracted to '{}'.\".format(archive_path, extract_to))\n",
+    "    print(f\"The archive '{archive_path}' has been successfully extracted to '{extract_to}'.\")\n",
+    "\n",
     "\n",
     "def convert_segments_xml_to_rttm(segments_directory, wav_root_directory):\n",
     "    rttm_data = {}\n",
     "\n",
-    "    pattern = os.path.join(segments_directory, \"*.segments.xml\")\n",
+    "    pattern = os.path.join(segments_directory, '*.segments.xml')\n",
     "    for xml_file in glob.glob(pattern):\n",
-    "        filename = os.path.basename(xml_file).replace(\".segments.xml\", \"\")\n",
-    "        split_parts = filename.split(\".\")\n",
+    "        filename = os.path.basename(xml_file).replace('.segments.xml', '')\n",
+    "        split_parts = filename.split('.')\n",
     "        if len(split_parts) < 2:\n",
     "            continue\n",
     "        meeting_id, speaker_label = split_parts[0], split_parts[1]\n",
@@ -174,12 +180,12 @@
     "        tree = ET.parse(xml_file)\n",
     "        root = tree.getroot()\n",
     "\n",
-    "        for seg in root.findall(\"segment\"):\n",
-    "            start_str = seg.get(\"transcriber_start\", \"0.0\")\n",
-    "            end_str   = seg.get(\"transcriber_end\", \"0.0\")\n",
+    "        for seg in root.findall('segment'):\n",
+    "            start_str = seg.get('transcriber_start', '0.0')\n",
+    "            end_str = seg.get('transcriber_end', '0.0')\n",
     "            try:\n",
     "                start = float(start_str)\n",
-    "                end   = float(end_str)\n",
+    "                end = float(end_str)\n",
     "            except ValueError:\n",
     "                continue\n",
     "            duration = end - start\n",
@@ -194,102 +200,101 @@
     "        wav_pattern = os.path.join(wav_root_directory, '**', f'{meeting_id}*.wav')\n",
     "        wav_files = glob.glob(wav_pattern, recursive=True)\n",
     "        if not wav_files:\n",
-    "            print(f\"Warning: No WAV file found for {meeting_id}. RTTM file could not be created.\")\n",
+    "            print(f'Warning: No WAV file found for {meeting_id}. RTTM file could not be created.')\n",
     "            continue\n",
     "\n",
     "        wav_dir = os.path.dirname(wav_files[0])\n",
-    "        output_path = os.path.join(wav_dir, f\"{meeting_id}.rttm\")\n",
+    "        output_path = os.path.join(wav_dir, f'{meeting_id}.rttm')\n",
     "        segments.sort(key=lambda x: x[0])\n",
     "\n",
-    "        with open(output_path, \"w\", encoding=\"utf-8\") as f:\n",
-    "            for (start, dur, spk) in segments:\n",
-    "                line = f\"SPEAKER {meeting_id} 1 {start:.3f} {dur:.3f} <NA> <NA> {spk} <NA> <NA>\\n\"\n",
+    "        with open(output_path, 'w', encoding='utf-8') as f:\n",
+    "            for start, dur, spk in segments:\n",
+    "                line = f'SPEAKER {meeting_id} 1 {start:.3f} {dur:.3f} <NA> <NA> {spk} <NA> <NA>\\n'\n",
     "                f.write(line)\n",
-    "        print(f\"Written: {output_path} ({len(segments)} segments)\")\n",
+    "        print(f'Written: {output_path} ({len(segments)} segments)')\n",
+    "\n",
     "\n",
     "def convert_wavs_to_mono(base_dir):\n",
     "    for root, dirs, files in os.walk(base_dir):\n",
     "        for file in files:\n",
-    "            if file.lower().endswith(\".wav\"):\n",
+    "            if file.lower().endswith('.wav'):\n",
     "                filepath = os.path.join(root, file)\n",
     "                try:\n",
     "                    audio = AudioSegment.from_wav(filepath)\n",
     "                    if audio.channels > 1:\n",
-    "                        print(f\"Converting to mono: {filepath}\")\n",
+    "                        print(f'Converting to mono: {filepath}')\n",
     "                        mono_audio = audio.set_channels(1)\n",
-    "                        mono_audio.export(filepath, format=\"wav\")\n",
+    "                        mono_audio.export(filepath, format='wav')\n",
     "                    else:\n",
-    "                        print(f\"Already mono: {filepath}\")\n",
+    "                        print(f'Already mono: {filepath}')\n",
     "                except Exception as e:\n",
-    "                    print(f\"Error occurred: {filepath} - {e}\")\n",
+    "                    print(f'Error occurred: {filepath} - {e}')\n",
+    "\n",
     "\n",
     "def create_manifest_with_random_n_sample():\n",
     "    wav_root_directory = wav_root_dir\n",
     "    manifest_directory = manifest_path\n",
     "    duration = 60.0\n",
     "\n",
-    "    all_wav_files = glob.glob(os.path.join(wav_root_directory, \"**\", \"*.wav\"), recursive=True)\n",
+    "    all_wav_files = glob.glob(os.path.join(wav_root_directory, '**', '*.wav'), recursive=True)\n",
     "\n",
     "    if len(all_wav_files) < 10:\n",
-    "        raise ValueError(f\"Found only {len(all_wav_files)} .wav files, need at least 10.\")\n",
+    "        raise ValueError(f'Found only {len(all_wav_files)} .wav files, need at least 10.')\n",
     "\n",
     "    selected_wavs = random.sample(all_wav_files, 10)\n",
     "\n",
-    "    with open(manifest_directory, \"w\", encoding=\"utf-8\") as f:\n",
+    "    with open(manifest_directory, 'w', encoding='utf-8') as f:\n",
     "        for wav_file in selected_wavs:\n",
     "            filename = os.path.basename(wav_file)\n",
     "\n",
-    "            meeting_id = filename.split(\".\")[0]\n",
+    "            meeting_id = filename.split('.')[0]\n",
     "\n",
-    "            rttm_file = os.path.join(os.path.dirname(wav_file), f\"{meeting_id}.rttm\")\n",
+    "            rttm_file = os.path.join(os.path.dirname(wav_file), f'{meeting_id}.rttm')\n",
     "\n",
     "            entry = {\n",
-    "                \"audio_filepath\": wav_file,\n",
-    "                \"offset\": 0.0,\n",
-    "                \"duration\": duration,\n",
-    "                \"rttm_filepath\": rttm_file\n",
+    "                'audio_filepath': wav_file,\n",
+    "                'offset': 0.0,\n",
+    "                'duration': duration,\n",
+    "                'rttm_filepath': rttm_file,\n",
     "            }\n",
-    "            f.write(json.dumps(entry) + \"\\n\")\n",
+    "            f.write(json.dumps(entry) + '\\n')\n",
     "\n",
-    "    print(f\"Manifest created with 10 entries: {manifest_path}\")"
-   ],
-   "id": "384ebe33ba67e6bd",
-   "outputs": [],
-   "execution_count": 15
+    "    print(f'Manifest created with 10 entries: {manifest_path}')"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Extract TAR",
-   "id": "ec74e4d84a991d01"
+   "id": "ec74e4d84a991d01",
+   "metadata": {},
+   "source": "## Extract TAR"
   },
   {
-   "metadata": {},
    "cell_type": "code",
+   "execution_count": null,
+   "id": "9cbf83beda19240b",
+   "metadata": {},
+   "outputs": [],
    "source": [
     "extract(tar_path_ami_manual, ami_manual_extract_to)\n",
     "extract(tar_path_ami_array1, ami_array1_extract_to)"
-   ],
-   "id": "9cbf83beda19240b",
-   "outputs": [],
-   "execution_count": null
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Convert XML to RTTM\n",
-   "id": "8e5e4a7ea0dc59cb"
+   "id": "8e5e4a7ea0dc59cb",
+   "metadata": {},
+   "source": "## Convert XML to RTTM\n"
   },
   {
+   "cell_type": "code",
+   "execution_count": 16,
+   "id": "ecf30dd60dcb2931",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:35:09.701218Z",
      "start_time": "2025-02-14T16:35:07.963336Z"
     }
    },
-   "cell_type": "code",
-   "source": "convert_segments_xml_to_rttm(segments_dir, wav_root_dir)",
-   "id": "ecf30dd60dcb2931",
    "outputs": [
     {
      "name": "stdout",
@@ -469,24 +474,26 @@
      ]
     }
    ],
-   "execution_count": 16
+   "source": [
+    "convert_segments_xml_to_rttm(segments_dir, wav_root_dir)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Convert to Mono",
-   "id": "79a6163fd919c515"
+   "id": "79a6163fd919c515",
+   "metadata": {},
+   "source": "## Convert to Mono"
   },
   {
+   "cell_type": "code",
+   "execution_count": 18,
+   "id": "881065eab76cd2f7",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:36:07.775162Z",
      "start_time": "2025-02-14T16:35:40.641015Z"
     }
    },
-   "cell_type": "code",
-   "source": "convert_wavs_to_mono(wav_root_dir)",
-   "id": "881065eab76cd2f7",
    "outputs": [
     {
      "name": "stdout",
@@ -664,24 +671,26 @@
      ]
     }
    ],
-   "execution_count": 18
+   "source": [
+    "convert_wavs_to_mono(wav_root_dir)"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Random 10 Sample with 60 Second",
-   "id": "fb696588e0958628"
+   "id": "fb696588e0958628",
+   "metadata": {},
+   "source": "## Random 10 Sample with 60 Second"
   },
   {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "a4d68b5635de1250",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:36:12.094448Z",
      "start_time": "2025-02-14T16:36:12.087162Z"
     }
    },
-   "cell_type": "code",
-   "source": "create_manifest_with_random_n_sample()",
-   "id": "a4d68b5635de1250",
    "outputs": [
     {
      "name": "stdout",
@@ -691,27 +700,26 @@
      ]
     }
    ],
-   "execution_count": 19
+   "source": [
+    "create_manifest_with_random_n_sample()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Diarization `MSDD + Titanet`",
-   "id": "aa359ecafa5b7308"
+   "id": "aa359ecafa5b7308",
+   "metadata": {},
+   "source": "## Diarization `MSDD + Titanet`"
   },
   {
+   "cell_type": "code",
+   "execution_count": 20,
+   "id": "f85bfbcfe021dd5d",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:47:20.160294Z",
      "start_time": "2025-02-14T16:36:33.149732Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "diar_model = NeuralDiarizer(cfg=cfg)\n",
-    "diar_model.diarize()"
-   ],
-   "id": "f85bfbcfe021dd5d",
    "outputs": [
     {
      "name": "stdout",
@@ -1446,29 +1454,27 @@
      "output_type": "execute_result"
     }
    ],
-   "execution_count": 20
+   "source": [
+    "diar_model = NeuralDiarizer(cfg=cfg)\n",
+    "diar_model.diarize()"
+   ]
   },
   {
-   "metadata": {},
    "cell_type": "markdown",
-   "source": "## Diarization `MSDD + WavLMBasePlus`\n",
-   "id": "45e7cbccc6a2b27e"
+   "id": "45e7cbccc6a2b27e",
+   "metadata": {},
+   "source": "## Diarization `MSDD + WavLMBasePlus`\n"
   },
   {
+   "cell_type": "code",
+   "execution_count": 21,
+   "id": "5b91c1501e2d8523",
    "metadata": {
     "ExecuteTime": {
      "end_time": "2025-02-14T16:47:38.920343Z",
      "start_time": "2025-02-14T16:47:20.184603Z"
     }
    },
-   "cell_type": "code",
-   "source": [
-    "embedder = WavLMSV()\n",
-    "\n",
-    "diarizer = Diarizer(embedding=embedder, manifest_path=manifest_path)\n",
-    "diarizer.run()"
-   ],
-   "id": "5b91c1501e2d8523",
    "outputs": [
     {
      "name": "stdout",
@@ -1874,7 +1880,12 @@
      ]
     }
    ],
-   "execution_count": 21
+   "source": [
+    "embedder = WavLMSV()\n",
+    "\n",
+    "diarizer = Diarizer(embedding=embedder, manifest_path=manifest_path)\n",
+    "diarizer.run()"
+   ]
   }
  ],
  "metadata": {
